# bingo

./: Cargo.toml  README-ZH_CN.md  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  error.rs  main.rs
