[package]
name = "bingo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
colored = "2.1.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bingo"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
