[package]
name = "bingogo"
version = "0.1.0"
edition = "2021"
description = "An executable file manager written in Rust."
license = "MIT"
repository = "https://github.com/dwpeng/bingo"

[dependencies]
clap = "4.5.4"
colored = "2.1.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bingo"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
